Fixed how section headers in sidebar are displayed

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,65 +3,68 @@
 	
 	<div class="container-fluid">
 	  
-	  <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/index.html"><img src="/assets/images/logos/prebid_final.png"></a>
-    </div>
+	  	<div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+		  <a class="navbar-brand" href="/index.html"><img src="/assets/images/logos/prebid_final.png"></a>
+    	</div>
     
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div id="navbar" class="navbar-collapse collapse">
-    	<ul class="nav navbar-nav navbar-right">
-	    	
-			{% for item in site.data.dropdowns %}
-			
-            <li class="dropdown">
-
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    {{ item.sectionName }}
-                    <span class="caret" />
-                </a> 
-                
-                <ul id="prebidDropDown" class="dropdown-menu">
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div id="navbar" class="navbar-collapse collapse">
+	    	<ul class="nav navbar-nav navbar-right">
+		    	
+				{% for item in site.data.dropdowns %}
+				
+	            <li class="dropdown">
+	
+	                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+	                    {{ item.sectionName }}
+	                    <span class="caret" />
+	                </a> 
+	                
+	                <ul id="prebidDropDown" class="dropdown-menu">
+		                    
+		                {% for submenu in item.submenus %}
 	                    
-	                {% for submenu in item.submenus %}
-                    
-                    <li class="dropdown dropdown-submenu">
-                        <a href="{{submenu.link}}">{{ submenu.title }}
+	                    <li class="dropdown dropdown-submenu">
+	                        <a href="{{submenu.link}}">{{ submenu.title }}
+		                        
+		                        {% if submenu.hasBubblePopOut == 1 %}
+		                       		<span class="caret" />
+		                       	{% endif %}
+	                        </a>
 	                        
 	                        {% if submenu.hasBubblePopOut == 1 %}
-	                       		<span class="caret" />
-	                       	{% endif %}
-                        </a>
-                        
-                        {% if submenu.hasBubblePopOut == 1 %}
-                        
-                        	<ul class="dropdown-menu">
-	                        	
-	                        	{% for bubblePopOut in submenu.bubble %}
-	                        	
-	                        		<li><a href="{{bubblePopOut.link}}">{{bubblePopOut.title}}</a></li>
-	                        	
-	                        	{% endfor %}
-	                        	
-                        	</ul>
-                        {% endif %}
-                    </li>
-                    
-                    {% endfor %}
-                </ul>
-                
-            </li>
-			
-			{% endfor %}
-               	        
-	        <!-- end loop through top level nav-->   
-        </ul>      	
-    </div>
-  </div>
+	                        
+	                        	<ul class="dropdown-menu">
+		                        	
+		                        	{% for bubblePopOut in submenu.bubble %}
+		                        	
+		                        		<li><a href="{{bubblePopOut.link}}">{{bubblePopOut.title}}</a></li>
+		                        	
+		                        	{% endfor %}
+		                        	
+	                        	</ul>
+	                        {% endif %}
+	                    </li>
+	                    
+	                    {% endfor %}
+	                </ul>
+	                
+	            </li>
+				
+				{% endfor %}
+	               	        
+		        <!-- end loop through top level nav-->   
+	        </ul>
+	        <!--end top level menu items-->     	
+	    </div>
+	    <!--end navbar-->
+  	</div>
+  	<!--end container-->
 
 </nav>	
