Fixed drop down on mobile

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,9 @@
-
 <nav class="navbar navbar-default navbar-fixed-top">
 	
 	<div class="container-fluid">
 	  
 	  	<div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+	      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
 	        <span class="sr-only">Toggle navigation</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
@@ -26,7 +25,7 @@
 	                    <span class="caret" />
 	                </a> 
 	                
-	                <ul id="prebidDropDown" class="dropdown-menu">
+	                <ul class="dropdown-menu">
 		                    
 		                {% for submenu in item.submenus %}
 	                    
@@ -66,5 +65,4 @@
 	    <!--end navbar-->
   	</div>
   	<!--end container-->
-
 </nav>	
