Updated CSS and fixed carousel

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -113,36 +113,30 @@
 					<div class="pb_home_belowfold_carousel">
 						<h1 class="pb_carousel_title">Product Highlights</h1>
 						
-						<div id="myCarousel" class="carousel slide" data-ride="carousel">
-						  
-						  <!-- Wrapper for slides -->
+						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 						  <div class="carousel-inner">
-						    <div class="item active">
+						    <div class="carousel-item active">
 						      <h3>Prebid.js</h3>
 						      <h4>A feature-rich header bidding platform for the web, including more than 150 demand sources and 15 analytics adapters. Supports currency conversion, GDPR, common ID systems, and multiple ad servers.</h4>
 						    </div>
-						
-						    <div class="item">
+						    <div class="carousel-item">
 						      <h3>Prebid Mobile</h3>
 						      <h4>Header bidding for your iOS and Android apps. Combine Prebid SDK and Prebid Server for a great user experience and easy management.</h4>
 						    </div>
-						
-						    <div class="item">
+						    <div class="carousel-item">
 						      <h3>Prebid Server</h3>
 						      <h4>A server-side header bidding solution with more than 20 demand sources. Hosted by a number of companies in highly available and geo-distributed clusters, Prebid Server lightens the load on browsers, while also enabling mobile app and AMP.</h4>
 						    </div>
 						  </div>
+						  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Previous</span>
+						  </a>
+						  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Next</span>
+						  </a>
 						</div>
-						
-						<div class="pb_carousel_indicators">
-						   	<ol class="carousel-indicators">
-						    	<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-								<li data-target="#myCarousel" data-slide-to="1"></li>
-								<li data-target="#myCarousel" data-slide-to="2"></li>
-						  	</ol>
-						  </div>
-						
-						
 						
 					</div>
 				</div>
