Fixes based on Tom's comments

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@
 	
 	<div class="pb_homewrapper">
 		<div class="pb_homewrapper_img">
-			<img src="/assets/images/homepage/pbhp_bg.png">
+			<img src="/assets/images/homepage/pbhp_bg2.png">
 		</div>
 		
 		<div class="pb_homewrapper_content">
@@ -38,7 +38,7 @@
 							</div>
 			
 							
-							<div class="pb_benefits_row">
+							<div class="pb_benefits_row pb_first_row">
 								
 								<div class="pb_benefits_panel pb_benefits_panel_left">
 								
