Fixes based on Matt's comments

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,7 +29,7 @@
 		                    
 		                {% for submenu in item.submenus %}
 	                    
-	                    <li class="dropdown dropdown-submenu">
+	                    <li class="dropdown-submenu pull-left">
 	                        <a href="{{submenu.link}}">{{ submenu.title }}
 		                        
 		                        {% if submenu.hasBubblePopOut == 1 %}
