--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,9 @@
 			<div class="row">
 				<div class="header-links">
 					
-					<div class="header-links-item"><a href="/developers.html"><img src="/assets/images/svg/icn_developers.svg"></a><p>Developers</p></div>
-					<div class="header-links-item"><a href="/prebid/prebidjs.html"><img src="/assets/images/svg/icn_getstarted.svg" class="large"></a><p>Get Started!</p></div>
-					<div class="header-links-item"><a href="/adops/before-you-start.html"><img src="/assets/images/svg/icn_adops.svg"></a><p>Ad Ops</p></div>
+					<div class="header-links-item"><a href="/developers.html" class="pb_dev_link"><img src="/assets/images/svg/icn_developers.svg"></a><p>Developers</p></div>
+					<div class="header-links-item"><a href="/prebid/prebidjs.html" class="pb_start_link"><img src="/assets/images/svg/icn_getstarted.svg" class="large"></a><p>Get Started!</p></div>
+					<div class="header-links-item"><a href="/adops/before-you-start.html" class="pb_adops_link"><img src="/assets/images/svg/icn_adops.svg"></a><p>Ad Ops</p></div>
 				</div>
 			</div>
 			
