Testing collapsible side nav

--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -30,7 +30,7 @@
 							<a href="{{item.link}}" class="list-group-item group-title">
 								
 								{% if item.sbUUID == page.sbUUID %}
-								<h4 class="list-group-item bold_item">{{item.title}}</h4>
+								<h4 class="list-group-item indicator">{{item.title}}</h4>
 								{% else %}
 								<h4 class="list-group-item">{{item.title}}</h4>
 								{% endif %}
