--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,10 +263,8 @@ hr {
 	background-color: transparent;
 }
 
-.bold-item { 
-	font-weight: 700;
-	color: #3498db;
-}
+.sidebar h4.indicator
+
 
 a.list-group-item:hover,
 button.list-group-item:hover,
@@ -886,7 +884,7 @@ button.list-group-item:focus {
 
 .pb-content p { 
 	
-	font-family: 'Lato', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color: #000000;
 	font-size: 20px;
 	font-weight: 100;
@@ -897,7 +895,7 @@ button.list-group-item:focus {
 	display: table;
 	background-color: #EA9622;
 	padding: 3px 8px;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	color: #ffffff;
 	font-size: 34px;
 	font-weight: 400;
@@ -905,7 +903,7 @@ button.list-group-item:focus {
 
 .pb-content h2 { 
 	
-	font-family: 'Lato', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	color: #000000;
 	font-size: 29px;
 	font-weight: 400;
@@ -913,7 +911,7 @@ button.list-group-item:focus {
 
 .pb-content h3 { 
 	
-	font-family: 'Lato', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	color: #333333;
 	font-size: 24px;
 	font-weight: 300;
@@ -921,7 +919,7 @@ button.list-group-item:focus {
 
 .pb-content h4 { 
 	
-	font-family: 'Lato', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	color: #333333;
 	font-size: 20px;
 	font-weight: 300;
@@ -930,7 +928,7 @@ button.list-group-item:focus {
 
 .pb-content h5 { 
 	
-	font-family: 'Lato', sans-serif;
+	font-family: 'Dosis', sans-serif;
 	color: #333333;
 	font-size: 18px;
 	font-weight: 300;
