Added a down indicator for collapsible menu

--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -73,10 +73,11 @@
 								<a href="#{{thisSectionHeader.headerId}}" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
 									<div class="d-flex w-100 justify-content-start align-items-center">
 										<span class="fa fa-dashboard fa-fw mr-3"></span> 
-										<span class="menu-collapsed pb-sidebar-section"><h4>{{thisSectionHeader.title}}</h4></span>
+										<span class="menu-collapsed pb-sidebar-section">{{thisSectionHeader.title}}&nbsp;&nbsp;<img src="/assets/images/downarrow.png"></span>
 										<span class="submenu-icon ml-auto"></span>
 		                			</div>
 		            			</a>
+		            			
 								
 								{% assign arrSubItems = arrSectionItems | where: "subgroup", thisSectionHeader.subgroup | where: "isHeader", "0" %}
 									
