--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ hr {
 	padding-right:30px;
 	margin-left: 0px;
 	width: 300px;
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Verdana', sans-serif;
 	float: left;
 }
 
@@ -238,25 +238,42 @@ hr {
 	color: #333333;
 }
 
-.sidebar h3 { 
+.sidebar h2 { 
 	font-size:23px;
-	font-family: 'Roboto', sans-serif;
-	color: #333333;
-	padding-bottom: 10px;    
+	font-family: 'Verdana', sans-serif;
+	padding-bottom: 10px;
+	margin-top:5px;
+	margin-bottom: 5px;    
 
+}
+
+.pb-section-title { 
+	color: #111111;
+}
+
+.pb-nav-item { 
+	display:inline-block;
+}
+
+.pb-first-item {
+	padding-top: 10px;
+}
+
+.pb-last-item {
+	padding-bottom: 10px;
+}
+
+.pb-nav-subhead { 
+	font-size:20px;
+	font-family: 'Verdana', sans-serif;
 }
 
 .list-group-item-header { 
-	
-	color: #333333;
 	font-weight: 400;
 	font-size: 20px;
-	
 }
 
 .list-group-item { 
-	
-	color: #333333;
 	font-weight: 200;
 	margin:0;
 	padding: 3px 0 3px 5px;
@@ -265,7 +282,6 @@ hr {
 	background-color: transparent;
 }
 
-.sidebar h4.indicator
 
 
 a.list-group-item:hover,
