--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,21 +238,24 @@ hr {
 	color: #333333;
 }
 
-.sidebar h2 { 
-	font-size:23px;
-	font-family: 'Verdana', sans-serif;
+.pb-section-title {
+	display: inline-block; 
+	font-size:17px;
 	padding-bottom: 10px;
 	margin-top:5px;
-	margin-bottom: 5px;    
-
+	margin-bottom: 5px; 
 }
 
-.pb-section-title { 
-	color: #111111;
+.pb-section-subtitle {
+	font-size:16px;
+	padding-bottom: 10px;
+	margin-top:5px;
+	margin-bottom: 5px; 
 }
 
 .pb-nav-item { 
 	display:inline-block;
+	font-size:14px;
 }
 
 .pb-first-item {
@@ -261,11 +264,6 @@ hr {
 
 .pb-last-item {
 	padding-bottom: 10px;
-}
-
-.pb-nav-subhead { 
-	font-size:20px;
-	font-family: 'Verdana', sans-serif;
 }
 
 .list-group-item-header { 
